WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261534
Fix compiler warning in WTF::moveToVectorOf()
https://bugs.webkit.org/show_bug.cgi?id=261534
Summary
Fix compiler warning in WTF::moveToVectorOf()
Chris Dumez
Reported
2023-09-13 16:09:25 PDT
Fix compiler warning in WTF::moveToVectorOf(): ``` /usr/local/include/wtf/Vector.h:1935:16: warning: Forwarding reference passed to std::move(), which may unexpectedly cause lvalues to be moved; use std::forward() instead [bugprone-move-forwarding-reference] ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-09-13 16:11:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17755
EWS
Comment 2
2023-09-14 09:51:11 PDT
Committed
267994@main
(9019b5fba914): <
https://commits.webkit.org/267994@main
> Reviewed commits have been landed. Closing PR #17755 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-09-14 09:52:15 PDT
<
rdar://problem/115500667
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug