Fix compiler warning in WTF::moveToVectorOf() https://bugs.webkit.org/show_bug.cgi?id=261534

Reviewed by Darin Adler.

Fix compiler warning in WTF::moveToVectorOf():
```
/usr/local/include/wtf/Vector.h:1935:16: warning: Forwarding reference passed
to std::move(), which may unexpectedly cause lvalues to be moved; use
std::forward() instead [bugprone-move-forwarding-reference]
```

* Source/WTF/wtf/Vector.h:
(WTF::moveToVectorOf):

Canonical link: https://commits.webkit.org/267994@main